--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,34 +1,44 @@
-# ASP.NET
-# Build and test ASP.NET projects.
-# Add steps that publish symbols, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/apps/aspnet/build-aspnet-4
+# ASP.NET Core
+# Build and test ASP.NET Core projects targeting .NET Core.
+# Add steps that run tests, create a NuGet package, deploy, and more:
+# https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
 trigger:
 - master
 
 pool:
-  vmImage: 'windows-latest'
+  vmImage: 'ubuntu-latest'
 
 variables:
-  solution: '**/*.sln'
-  buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
 steps:
-- task: NuGetToolInstaller@1
 
-- task: NuGetCommand@2
+# Prepare sonarCloud analysis
+- task: SonarCloudPrepare@1
   inputs:
-    restoreSolution: '$(solution)'
+    SonarCloud: 'bmiCalculatorSonar'
+    organization: 'x00129492'
+    scannerMode: 'MSBuild'
+    projectKey: 'bmiCalculator:Sonar'
+    projectName: 'bmiCalculatorSonar'
 
-- task: VSBuild@1
-  inputs:
-    solution: '$(solution)'
-    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactStagingDirectory)"'
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+# Build Project
+- script: dotnet build --configuration $(buildConfiguration)
+  displayName: 'dotnet build $(buildConfiguration)'
 
-- task: VSTest@2
+# Run unit test
+- task: DotNetCoreCLI@2
+  displayName: 'Run unit test $(buildConfiguration)'
   inputs:
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+    command: test
+    projects: '**/*UnitTest*/*.csproj'
+    arguments: '--configuration $(buildConfiguration)'
+
+# Run code analysis
+- task: SonarCloudAnalyze@1
+
+#Publish quality gate result
+- task: SonarCloudPublish@1
+  inputs:
+    pollingTimeoutSec: '300'
